Perma Windows MinGW [tier 2] /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1366:12: error: use of undeclared identifier 'UIA_FormLandmarkTypeId'
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox125 | --- | unaffected |
| firefox126 | --- | unaffected |
| firefox127 | --- | fixed |
| firefox128 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: Jamie)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disable-recommended])
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Filed by: nfay [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=457210621&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/VWM4QhMlTb2bD57Y7Wra3Q/runs/0/artifacts/public/logs/live_backing.log
[task 2024-05-07T03:34:02.728Z] 03:34:02 WARNING - /builds/worker/checkouts/gecko/accessible/windows/msaa/MsaaDocAccessible.h:25:3: warning: 'QueryInterface' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
[task 2024-05-07T03:34:02.734Z] 03:34:02 INFO - 25 | DECL_IUNKNOWN_INHERITED
[task 2024-05-07T03:34:02.742Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.743Z] 03:34:02 INFO - /builds/worker/checkouts/gecko/accessible/windows/msaa/IUnknownImpl.h:74:37: note: expanded from macro 'DECL_IUNKNOWN_INHERITED'
[task 2024-05-07T03:34:02.743Z] 03:34:02 INFO - 74 | virtual HRESULT STDMETHODCALLTYPE QueryInterface(REFIID, void**);
[task 2024-05-07T03:34:02.744Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.744Z] 03:34:02 INFO - /builds/worker/checkouts/gecko/accessible/windows/ia2/ia2AccessibleHypertext.h:31:3: note: overridden virtual function is here
[task 2024-05-07T03:34:02.744Z] 03:34:02 INFO - 31 | DECL_IUNKNOWN_INHERITED
[task 2024-05-07T03:34:02.744Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.745Z] 03:34:02 INFO - /builds/worker/checkouts/gecko/accessible/windows/msaa/IUnknownImpl.h:74:37: note: expanded from macro 'DECL_IUNKNOWN_INHERITED'
[task 2024-05-07T03:34:02.745Z] 03:34:02 INFO - 74 | virtual HRESULT STDMETHODCALLTYPE QueryInterface(REFIID, void**);
[task 2024-05-07T03:34:02.745Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.746Z] 03:34:02 ERROR - /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1366:12: error: use of undeclared identifier 'UIA_FormLandmarkTypeId'
[task 2024-05-07T03:34:02.746Z] 03:34:02 INFO - 1366 | return UIA_FormLandmarkTypeId;
[task 2024-05-07T03:34:02.746Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.747Z] 03:34:02 ERROR - /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1369:12: error: use of undeclared identifier 'UIA_MainLandmarkTypeId'
[task 2024-05-07T03:34:02.747Z] 03:34:02 INFO - 1369 | return UIA_MainLandmarkTypeId;
[task 2024-05-07T03:34:02.747Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.747Z] 03:34:02 ERROR - /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1372:12: error: use of undeclared identifier 'UIA_NavigationLandmarkTypeId'
[task 2024-05-07T03:34:02.748Z] 03:34:02 INFO - 1372 | return UIA_NavigationLandmarkTypeId;
[task 2024-05-07T03:34:02.748Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.749Z] 03:34:02 ERROR - /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1375:12: error: use of undeclared identifier 'UIA_SearchLandmarkTypeId'
[task 2024-05-07T03:34:02.749Z] 03:34:02 INFO - 1375 | return UIA_SearchLandmarkTypeId;
[task 2024-05-07T03:34:02.750Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.750Z] 03:34:02 ERROR - /builds/worker/checkouts/gecko/accessible/windows/uia/uiaRawElmProvider.cpp:1377:10: error: use of undeclared identifier 'UIA_CustomLandmarkTypeId'
[task 2024-05-07T03:34:02.751Z] 03:34:02 INFO - 1377 | return UIA_CustomLandmarkTypeId;
[task 2024-05-07T03:34:02.751Z] 03:34:02 INFO - | ^
[task 2024-05-07T03:34:02.752Z] 03:34:02 INFO - 74 warnings and 5 errors generated.
[task 2024-05-07T03:34:02.752Z] 03:34:02 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:688: uiaRawElmProvider.o] Error 1
[task 2024-05-07T03:34:02.753Z] 03:34:02 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/accessible/windows/uia'
[task 2024-05-07T03:34:02.753Z] 03:34:02 INFO - gmake[4]: Target 'target-objects' not remade because of errors.
[task 2024-05-07T03:34:02.753Z] 03:34:02 ERROR - gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: accessible/windows/uia/target-objects] Error 2
[task 2024-05-07T03:34:02.754Z] 03:34:02 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/chrome'
[task 2024-05-07T03:34:02.754Z] 03:34:02 INFO - mkdir -p '.deps/'
[task 2024-05-07T03:34:02.755Z] 03:34:02 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/chrome'
[task 2024-05-07T03:34:02.755Z] 03:34:02 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/browser/components/shell'
[task 2024-05-07T03:34:02.758Z] 03:34:02 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -o nsWindowsShellService.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 '-DMOZ_APP_DISPLAYNAME="Firefox Nightly"' '-DMOZ_APP_NAME="firefox"' '-DMOZ_APP_VERSION="127.0a1"' '-DMOZ_DEFAULT_BROWSER_AGENT="None"' -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/browser/components/shell -I/builds/worker/workspace/obj-build/browser/components/shell -I/builds/worker/checkouts/gecko/xpcom/build -I/builds/worker/checkouts/gecko/other-licenses/nsis/Contrib/CityHash/cityhash -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -include _mingw.h -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/nsWindowsShellService.o.pp /builds/worker/checkouts/gecko/browser/components/shell/nsWindowsShellService.cpp
[task 2024-05-07T03:34:02.759Z] 03:34:02 INFO - In file included from /builds/worker/checkouts/gecko/browser/components/shell/nsWindowsShellService.cpp:21:
[task 2024-05-07T03:34:02.760Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsNetUtil.h:21:
[task 2024-05-07T03:34:02.761Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsILoadInfo.h:57:
[task 2024-05-07T03:34:02.761Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/OriginAttributes.h:11:
[task 2024-05-07T03:34:02.761Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/StaticPrefs_privacy.h:7:
[task 2024-05-07T03:34:02.761Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/StaticPrefListBegin.h:12:
[task 2024-05-07T03:34:02.762Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:18:
[task 2024-05-07T03:34:02.763Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:17:
[task 2024-05-07T03:34:02.763Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/Monitor.h:10:
[task 2024-05-07T03:34:02.763Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/CondVar.h:11:
[task 2024-05-07T03:34:02.764Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/PlatformConditionVariable.h:16:
[task 2024-05-07T03:34:02.765Z] 03:34:02 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/TimeStamp.h:27:
[task 2024-05-07T03:34:02.765Z] 03:34:02 WARNING - /builds/worker/workspace/obj-build/dist/include/mozilla/TimeStamp_windows.h:53:13: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
Comment 1•1 year ago
|
||
:Jamie, since you are the author of the regressor, bug 1887789, could you take a look?
For more information, please visit BugBot documentation.
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
I'm not sure what the correct course of action here is. It seems there are missing constants in the headers being used here. I guess we can conditionally define them, but that seems pretty ugly.
Comment 3•1 year ago
|
||
Set release status flags based on info from the regressing bug 1887789
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•1 year ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 9•1 year ago
•
|
||
(In reply to James Teh [:Jamie] from comment #2)
I'm not sure what the correct course of action here is. It seems there are missing constants in the headers being used here. I guess we can conditionally define them, but that seems pretty ugly.
Hi [:Jamie], if we think it's useful the long-term fix for this situation is to update uiautomationclient.idl and uiautomationclient.h upstream in mingw-w64 based on Microsoft's version of the IDL file. The files are indeed outdated in mingw-w64 at the moment. The Microsoft file is located at C:\Program Files (x86)\Windows Kits\10\Include\10.0.22621.0\um\UIAutomationClient.idl on my machine. It seems we can then generate the .h file from the .idl file using widl. I can take that part unless you would like to give it a try.
The short-term fix is to use a #ifdef __MINGW32__ block. We can use it to comment out the faulty code in mingw builds assuming it is OK to not have this feature in Tor. Or we can use it as the guard condition under which we want to manually define the missing constants. It's up to you to choose what's most appropriate. Then when we update to a more recent version of mingw-w64 we will be able to remove that #ifdef if we went for the long-term fix. But please make sure to implement a short-term fix anyway so that we can have the mingw builds back.
Comment 10•1 year ago
|
||
Set release status flags based on info from the regressing bug 1887789
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 11•1 year ago
|
||
| Assignee | ||
Comment 12•1 year ago
|
||
| Comment hidden (Intermittent Failures Robot) |
(In reply to James Teh [:Jamie] from comment #12)
https://treeherder.mozilla.org/jobs?repo=try&revision=1667e1cc40b8ad8ed178f1e9938b09f3f85dceb5
Great! The remaining error should be fixed with the landing of bug 1896632.
Comment 15•1 year ago
|
||
Comment 16•1 year ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Comment 18•1 year ago
|
||
The patch landed in nightly and beta is affected.
:Jamie, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox127towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 19•1 year ago
|
||
I think this only impacts Tor and Tor is built off ESR, which is not affected by this bug.
| Comment hidden (Intermittent Failures Robot) |
(In reply to James Teh [:Jamie] from comment #19)
I think this only impacts Tor and Tor is built off ESR, which is not affected by this bug.
While this is true, it seems we're going anyway for a fix on 127 branch just for sanity with bug 1896632. Could you file a beta uplift request for the patch in this bug? Thank you.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 22•1 year ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D210401
Updated•1 year ago
|
Comment 23•1 year ago
|
||
beta Uplift Approval Request
- User impact if declined: MinGW build errors.
- Code covered by automated testing: yes
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: not applicable
- Risk associated with taking this patch: low
- Explanation of risk level: Build fix for MinGW.
- String changes made/needed: none
- Is Android affected?: no
Updated•1 year ago
|
Updated•1 year ago
|
Comment 24•1 year ago
|
||
| uplift | ||
MinGW builds are now working again on beta branch: https://treeherder.mozilla.org/jobs?revision=a6ae0fd73729d683958acd01b9363bd6d09ef2dd&repo=try
Description
•