Bug 1895428: Fix MinGW build error and warning in accessibility code. r=yjuglaret

Differential Revision: https://phabricator.services.mozilla.com/D210401